# cohub-desktop

./: .gitignore  AGENTS.md  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tauri.conf.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx  api.rs  auth.rs  main.rs  state.ts  styles.css  ws.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  auth.rs  main.rs  settings.rs  tray.rs  ws.rs
src/components/: ActivityFeed.tsx  CloudDrive.tsx  LiveActivity.tsx  SettingsDialog.tsx  Sidebar.tsx  SignInCard.tsx  StatusPanel.tsx  TurnCard.tsx
src/lib/: api.ts  format.ts  toast.ts  types.ts
ui/: index.html  main.js
