[package]
name = "cohub-desktop"
version = "0.1.0"
edition = "2021"
description = "Cohub desktop companion: device-flow login + realtime turn notifications (prototype, not compile-verified)"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
directories = "5"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "cohub-desktop"
path = "src/main.rs"
